--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,43 @@
 .App {
   text-align: center;
 }
+.nav-appBar {
+  display: flex;
+}
 .NavLink {
   font-size: 20px;
   color: black;
+  margin-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .NavLink-active {
   color: blue;
+}
+
+.appLink {
+  background: transparent;
+  border: 1px solid #232323;
+  border-radius: 10px;
+  position: relative;
+  letter-spacing: 0.3em;
+  font-family: "Montserrat", sans-serif;
+  padding: 17px 34px 17px 39px;
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+}
+.appLink:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 100%;
+  height: 100%;
+  background: #8fd4c1;
+  z-index: -1;
+  transition: 0.25s ease;
+  transform: translate(0, 0);
+}
+.appLink:hover:before {
+  transform: translate(4px, 4px);
 }
